[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camel-lang"
version = "0.1.20"
description = "Camel: A Next-Generation Language for AI and High-Performance Computing"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["language", "camel", "ai", "dsl", "graph", "opencml"]
authors = [{ name = "Zhenjie Wei", email = "kogler_s@outlook.com" }]
maintainers = [{ name = "Zhenjie Wei", email = "kogler_s@outlook.com" }]
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Other",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]

[project.urls]
Homepage = "https://www.opencml.com"
Documentation = "https://docs.opencml.com"
Repository = "https://github.com/OpenCML/Camel"
Issues = "https://github.com/OpenCML/Camel/issues"

# .cmlenv mirrors out/<tag>/ in full; wrapper-dist/* is one launcher per bin tool (.cmd per .exe on Windows)
[project.scripts]
cpm = "camel.cli:cpm"

[tool.setuptools]
include-package-data = true
# script-files injected by pypi-rollup before wheel build; keep empty in git
script-files = []

[tool.setuptools.package-data]
camel = [".cmlenv/*"]
